--- a/404.html
+++ b/404.html
@@ -1,4 +1,17 @@
-<!doctype html><html lang=en><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>Ibrahim - CV</title><link rel=stylesheet href="https://fonts.googleapis.com/css?family=Oswald"><link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto"><link rel=stylesheet href=https://pro.fontawesome.com/releases/v5.10.0/css/all.css integrity=sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p crossorigin=anonymous><link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel=stylesheet><link rel=stylesheet href=https://ibrahim5823.github.io/style.main.min.2330386d0a0c344f5a16190eb43a34f2e1da43511611e54a1430b77e854e5d62.css integrity="sha256-IzA4bQoMNE9aFhkOtDo08uHaQ1EWEeVKFDC3foVOXWI="><script src=https://code.jquery.com/jquery-3.5.1.min.js integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin=anonymous></script><script type=module src=https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.2.0/jspdf.umd.min.js></script><script src=https://cdn.jsdelivr.net/npm/html2canvas@1.0.0-rc.1/dist/html2canvas.min.js></script><script type=module>
+<!doctype html><html lang=en>
+<head>
+<meta charset=utf-8>
+<meta name=viewport content="width=device-width,initial-scale=1">
+<title>Ibrahim - CV</title>
+<link rel=stylesheet href="https://fonts.googleapis.com/css?family=Oswald">
+<link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto">
+<link rel=stylesheet href=https://pro.fontawesome.com/releases/v5.10.0/css/all.css integrity=sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p crossorigin=anonymous>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel=stylesheet>
+<link rel=stylesheet href=https://ibrahim5823.github.io/style.main.min.260cc59c2cb0d54de8bab805c992c992fd719007a931e74cc425dff4b3f41582.css integrity="sha256-JgzFnCyw1U3ourgFyZLJkv1xkAepMedMxCXf9LP0FYI=">
+<script src=https://code.jquery.com/jquery-3.5.1.min.js integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin=anonymous></script>
+<script type=module src=https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.2.0/jspdf.umd.min.js></script>
+<script src=https://cdn.jsdelivr.net/npm/html2canvas@1.0.0-rc.1/dist/html2canvas.min.js></script>
+<script type=module>
         $(document).ready(function () {
             const { jsPDF } = window.jspdf;
             
@@ -34,4 +47,18 @@
     
         });
     });
-    </script></head><body><div class=content><div class=pageNotFound><h1>Page not found :(</h1><p class=pageNotFound__text>You're an explorer, aren't ya?<br>But the page you are attempting to access cannot be found.<br>Go back to the <a href=/>main page</a></p></div></div></body></html>
+    </script>
+</head>
+<body>
+<div class=content>
+<div class=pageNotFound>
+<h1>Page not found :(</h1>
+<p class=pageNotFound__text>
+You're an explorer, aren't ya?<br>
+But the page you are attempting to access cannot be found.<br>
+Go back to the <a href=/>main page</a>
+</p>
+</div>
+</div>
+</body>
+</html>
