--- a/404.html
+++ b/404.html
@@ -1,14 +1,4 @@
-<!doctype html><html lang=en>
-<head>
-<meta charset=utf-8>
-<meta name=viewport content="width=device-width,initial-scale=1">
-<title>Ibrahim - CV</title>
-<link rel=stylesheet href="https://fonts.googleapis.com/css?family=Oswald">
-<link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto">
-<link rel=stylesheet href=https://pro.fontawesome.com/releases/v5.10.0/css/all.css integrity=sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p crossorigin=anonymous>
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel=stylesheet>
-<link rel=stylesheet href=https://ibrahim5823.github.io/style.main.min.9b85f09adddd5996f64033e3cbc1077258bb20bf527da862e048432c4e79b1e6.css integrity="sha256-m4Xwmt3dWZb2QDPjy8EHcli7IL9Sfahi4EhDLE55seY=">
-<script src=https://code.jquery.com/jquery-3.5.1.min.js integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin=anonymous></script>
+<!doctype html><html lang=en><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>Ibrahim - CV</title><link rel=stylesheet href="https://fonts.googleapis.com/css?family=Oswald"><link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto"><link rel=stylesheet href=https://pro.fontawesome.com/releases/v5.10.0/css/all.css integrity=sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p crossorigin=anonymous><link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel=stylesheet><link rel=stylesheet href=https://ibrahim5823.github.io/style.main.min.9b85f09adddd5996f64033e3cbc1077258bb20bf527da862e048432c4e79b1e6.css integrity="sha256-m4Xwmt3dWZb2QDPjy8EHcli7IL9Sfahi4EhDLE55seY="><script src=https://code.jquery.com/jquery-3.5.1.min.js integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin=anonymous></script>
 <script type=module src=https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.2.0/jspdf.umd.min.js></script>
 <script src=https://cdn.jsdelivr.net/npm/html2canvas@1.0.0-rc.1/dist/html2canvas.min.js></script>
 <script type=module>
@@ -47,18 +37,4 @@
     
         });
     });
-    </script>
-</head>
-<body>
-<div class=content>
-<div class=pageNotFound>
-<h1>Page not found :(</h1>
-<p class=pageNotFound__text>
-You're an explorer, aren't ya?<br>
-But the page you are attempting to access cannot be found.<br>
-Go back to the <a href=/>main page</a>
-</p>
-</div>
-</div>
-</body>
-</html>
+    </script></head><body><div class=content><div class=pageNotFound><h1>Page not found :(</h1><p class=pageNotFound__text>You're an explorer, aren't ya?<br>But the page you are attempting to access cannot be found.<br>Go back to the <a href=/>main page</a></p></div></div></body></html>
